# python-mdmenu

./: .flake8  .pylintrc  README.md  pyproject.toml
.github/workflows/: lint.yml  list-test-build.yml  pypi-publish.yml  python-lint.yml  python-package.yml  test.yml
examples/: add_option.py  call_function.py  custom_formatting.py  default_menu.py  defined_options.py  remove_option.py
pytests/: test_mdmenu.py
src/mdmenu/: __init__.py  __main__.py  mdmenu.py  menu.py
