[project]
name = "mdmenu"
version = "0.0.0"
authors = [
  { name = "Matt Dennett", email = "dennett.matthew@gmail.com" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "GPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/matthewdennett/python-mdmenu"
Issues = "https://github.com/matthewdennett/python-mdmenu/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
